# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = zotrm
description = Add a short description here!
author = samuelyeewl
author-email = samuelyeewl@gmail.com
license = none
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/samuelyeewl/zotrm
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src

install_requires = 
            pyzotero
            appdirs
            click

python_requires = >=3.7

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
 console_scripts =
     zotrm = zotrm.zotrm:script

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1